--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,7 +53,7 @@ sed do
 
   <div><label><span>Pet Name: </span><input placeholder="pet name, if any" class="input1" type="text" name="petName" tabindex="5"></label></div>
 
-  <div> <label><span>Bread: </span><input placeholder="its bread" class="input" type="text" name="bread" tabindex="6">
+  <div> <label><span>Breed: </span><input placeholder="its breed" class="input" type="text" name="bread" tabindex="6">
 </label>
   </div>
 
