I changed the home page of the Angular
I uppdated the home for the Angular side. I changed the background

--- a/app_public/src/app/home/home.component.html
+++ b/app_public/src/app/home/home.component.html
@@ -1,12 +1,22 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>home</title>
+  <style>
+    body{
+      background-image: url('../assets/images/dog-banner.webp');
+      background-repeat: no-repeat;
+       background-size: 100%;
+
+    }
+  </style>
 </head>
-<h1>Homepage</h1>
 <body>
+  <h1>This is the homepage</h1>
+
 
 </body>
 </html>
