--- a/app_public/src/app/about-us/about-us.component.html
+++ b/app_public/src/app/about-us/about-us.component.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
- 
-<h1>About us</h1>
-
+  <title>Abou us</title>
 </head>
 <body>
+<h1>This is the about us page!</h1>
 
 </body>
 </html>
