--- a/app_public/src/app/contact-us/contact-us.component.html
+++ b/app_public/src/app/contact-us/contact-us.component.html
@@ -1,1 +1,82 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+</head>
+<body>
+<div class="left">
+  <br>
+  Lorem ipsum dolor sit amet, mel falli maiestatis neglegentur no, ne eos case audiam. Summo prompta pro ea, vis et inani dicit aliquip. Eam ne viderer scribentur neglegentur, in principes abhorreant pri. Ad mei lobortis intellegam, eum cu ferri postea putent.
+   Usu cu facer accumsan perfecto. Paulo gubergren et sed.
 
+Movet vocibus sed ea. An mutat convenire nec,
+ vis postea virtute efficiendi eu, nostro facilis te vix.
+  Probo errem referrentur ne pri, ut diam sale sit.
+  Ad sea errem solet, et commune instructior mel. Vix et graeci denique eloquentiam. Ne officiis urbanitas neglegentur qui, duo te clita dolores scripserit
+</div>
+<div class="right">
+  <br>
+<h1>
+    We moved, and our new location will be posted soon!</h1>
+    <form id="contact-form" method="post" action="/add" role="form">
+
+    <div class="messages"></div>
+
+    <div class="controls">
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_name">Firstname </label>
+                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                    <!-- <div class="help-block with-errors"></div> -->
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_lastname">Lastname </label>
+                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname " required="required" data-error="Lastname is required.">
+                    <!-- <div class="help-block with-errors"></div> -->
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_email">Email </label>
+                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email " required="required" data-error="Valid email is required.">
+                    <!-- <div class="help-block with-errors"></div> -->
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_phone">Phone</label>
+                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                    <!-- <div class="help-block with-errors"></div> -->
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="form_message">Message </label>
+                    <textarea id="form_message" name="message" class="form-control" placeholder="Message for me " rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                    <!-- <div class="help-block with-errors"></div> -->
+                </div>
+            </div>
+            <div class="col-md-12">
+                <input type="submit" class="btn btn-success btn-send" value="Send message">
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
+    </div>
+
+</form>
+
+</div>
+</body>
+</html>
