update on contact page in Angular Site

--- a/app_public/src/app/contact-us/contact-us.component.html
+++ b/app_public/src/app/contact-us/contact-us.component.html
@@ -6,8 +6,11 @@
   <title>Contact</title>
 </head>
 <body>
+
 <div class="left">
-  <br>
+
+<h1>Pet-Central</h1>
+<p>If you lost a pet or found one, Pet-central will help you in many ways.</p>
   Lorem ipsum dolor sit amet, mel falli maiestatis neglegentur no, ne eos case audiam. Summo prompta pro ea, vis et inani dicit aliquip. Eam ne viderer scribentur neglegentur, in principes abhorreant pri. Ad mei lobortis intellegam, eum cu ferri postea putent.
    Usu cu facer accumsan perfecto. Paulo gubergren et sed.
 
