updated some files

--- a/app_public/src/app/contact-us/welcome.html
+++ b/app_public/src/app/contact-us/welcome.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abou us</title>
+  <title>Document</title>
 </head>
 <body>
-<h1>This is the about us page!</h1>
-
+  <h3>We recieved your information, and will conact you back</h3>
 
 </body>
 </html>
