--- a/app_public/src/app/lost-item/lost-item.component.html
+++ b/app_public/src/app/lost-item/lost-item.component.html
@@ -5,9 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>lost-item</title>
+  <style>
+.lorem{
+
+  width: 45%;
+  float: center;
+  background-color: lightblue;
+}
+  </style>
 </head>
 <body>
 <h1>This is the lost-item page!</h1>
+<div class="lorem">
+  <p>
+Lorem ipsum dolor sit amet,
+legendos oportere ut eam,
+eam ex enim eripuit,
+ad eam error ludus.Ei ceteros suscipit adipisci eos.Sea cu dolore urbanitas.Quo te lorem minim discere.Vidisse dolorem cu ius.Ut mel meliore definiebas,
+ea eam tantas euripidis,
+vis te oporteat detraxit legendos.Ei has tale temporibus adversarium.Alienum percipit mel ut,
+vel vocent nominavi vituperatoribus eu.Sea cu inermis deleniti.
+
+
+  </p>
+</div>
 
 
 </body>
