--- a/app_public/src/app/app.component.html
+++ b/app_public/src/app/app.component.html
@@ -3,182 +3,58 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <style>
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  width: 1045px;
+li{
+  padding: 16px;
 }
 
-li {
-  float: right;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 15px 17px;
-  text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color:rgb(230, 145, 19);
-}
-.LL{
-background-color: #333;;
-
-}
-.moved{
-  background-color: lightgray;
-  float: right;
-  width: 580px;
-  padding-left: 45px;
-  padding-top: 35px;
-  margin-right: 500px;
-  padding-bottom: 20px;
-
-}
-.log1{
-  float: left;
-
-  padding-left: 50px;
-  width: 160px;
-  height: 50px;
-  padding-top: 15px;
-  padding-bottom: 5px;
-
-}
-
-.txtArea {
-
-    padding: 10px;
-    line-height: 2.5;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px #999;
-}
 </style>
 
+ <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+
+  <a class="navbar-brand" href="#">LOGO</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+ <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+
+        <a class="nav-link" routerlinkActive="active"><a routerLink="/" >Home</a>
+      </li>
+
+ <li class="nav-item">
+   <a class="nav-link" routerlinkActive="active"><a routerLink="/contact-us">Contact us</a>
+ </li>
+
+ <li class="nav-item">
+    <class="nav-link" routerlinkActive="active"><a routerLink="/about-us">About us</a>
+ </li>
+
+ <li class="nav-item">
+   <class="nav-link" routerlinkActive="active"><a routerLink="/lost-item">Lost Item</a>
+      </li>
+
+ <li class="nav-item">
+   <class="nav-link" routerlinkActive="active"><a routerLink="/founded-item">Founded Item</a>
+ </li>
 
 
-<div class="LL">
-  <div>
-<img src="../assets/images/logoAngular.png" class="log1">
-</div>
+ <li class="nav-item">
+   <class="nav-link" routerlinkActive="active"><a routerLink="./registration">Registration</a>
+ </li>
+ <li class="nav-item">
+  <class="nav-link" routerlinkActive="active"><a routerLink="/signin">Sign In</a></li>
 
-
-<div class="container">
-
-        <ul>
-
-            <li routerlinkActive="active"><a routerLink="/founded-item">Founded Item</a></li>
-            <li routerlinkActive="active"><a routerLink="/lost-item">Lost Item</a></li>
-            <li routerlinkActive="active"><a routerLink="/signin">Sign In</a></li>
-            <li routerlinkActive="active"><a routerLink="./registration">Registration</a></li>
-            <li routerlinkActive="active"><a routerLink="/contact-us">Contact us</a></li>
-            <li routerlinkActive="active"><a routerLink="/about-us">About us</a></li>
-            <li routerlinkActive="active"><a routerLink="/" >Home</a></li>
-
-        </ul>
-        <hr>
-</div>
-
-
-
-
-</div>
-<!-- <hr>
-<div class="moved">
-    <h2>Get in touch and tell us what you lost or found</h2>
-
-
-<div>
-  <form [formGroup] ="userInformationForm" (ngSubmit)="onSubmit()">
-  <label>
-    First Name:
-    <br>
-    <input type="text" formControlName="firstName" placeholder="Your first name" name="firstName">
- </label>
-<br>
-
-   <label>
-    Last Name:
-    <br>
-
-<input type="text" formControlName="lastName" placeholder="Your lastt name" name="lastName">
-
- </label>
-<br>
-
-   <label>
-     E-mail:
-     <br>
-    <input type="text" formControlName="email"  placeholder="Your email" name="email">
- </label>
-<br>
-
-
-   <label>
-     Phone:
-<br>
-
-    <input type="phone" formControlName="phone" placeholder="phone" name="phone">
- </label>
-<br>
-
-   <label>
-     Pet Name, if any:
-<br>
-
-    <input type="text" formControlName="petName" placeholder="petName" name="petName">
- </label>
-<br>
-
-<label>
-     Breed:
-<br>
-
-    <input type="text" formControlName="breed" placeholder="breed" name="breed" >
- </label>
-<br>
-
-
-
-
-   <label>
-     description:
-<br>
-
-<input type="textarea" formControlName="description"  class="txtArea" placeholder="description" name="description">
-
-
- </label>
-<br>
-
-   <label>
-<br>
-
-     Location:
-<br>
-
-    <input type="text" formControlName="location" placeholder="location" name="location">
- </label>
-<br>
-
- <button type="submit" [disabled]="!userInformationForm.valid">Submit</button>
-
-</form>
-{{ userInformationForm.value | json }}
-
-</div>
-</div>
-
-<hr> -->
+    </ul>
+     <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
 
 
 <router-outlet></router-outlet>
