--- a/app_public/src/app/contact-us/contact-us.component.html
+++ b/app_public/src/app/contact-us/contact-us.component.html
@@ -21,8 +21,7 @@ Movet vocibus sed ea. An mutat convenire nec,
 </div>
 <div class="right">
   <br>
-<h1>
-    We moved, and our new location will be posted soon!</h1>
+<h1> We moved, and our new location will be posted soon!</h1>
     <form id="contact-form" method="post" action="/add" role="form">
 
     <div class="messages"></div>
@@ -30,47 +29,50 @@ Movet vocibus sed ea. An mutat convenire nec,
     <div class="controls">
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="form_name">Firstname </label>
-                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                    <input id="form_name" type="text" name="firstName" class="form-control" placeholder="Please enter your firstname " required="required" data-error="Firstname is required." formControl="firstName">
                     <!-- <div class="help-block with-errors"></div> -->
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="form_lastname">Lastname </label>
-                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname " required="required" data-error="Lastname is required.">
+<input id="form_lastname" type="text" name="lastName" class="form-control" placeholder="Please enter your lastname " required="required" data-error="Lastname is required." formControl="lastName">
+
                     <!-- <div class="help-block with-errors"></div> -->
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="form_email">Email </label>
-                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email " required="required" data-error="Valid email is required.">
+                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email " formControl="email" >
                     <!-- <div class="help-block with-errors"></div> -->
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="form_phone">Phone</label>
-                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone" formControl="phone">
                     <!-- <div class="help-block with-errors"></div> -->
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <div class="form-group">
                     <label for="form_message">Message </label>
-                    <textarea id="form_message" name="message" class="form-control" placeholder="Message for me " rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                    <textarea id="form_message" name="message" class="form-control" placeholder="Message for me " rows="4"  data-error="Please,leave us a message." formControl="textarea"></textarea>
                     <!-- <div class="help-block with-errors"></div> -->
                 </div>
             </div>
             <div class="col-md-12">
-                <input type="submit" class="btn btn-success btn-send" value="Send message">
+                <input type="submit" class="btn btn-success btn-send" value="Send message" >
+
+
             </div>
         </div>
         <div class="row">
