--- a/app_public/src/app/registration/registration.component.html
+++ b/app_public/src/app/registration/registration.component.html
@@ -1,9 +1,12 @@
 
-
-
-
-<h1>this is the registration page</h1>
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration page</title>
+</head>
+<body>
+<h1>This is a registration page</h1>
+</body>
+</html>
