--- a/app_public/src/app/signin/signin.component.html
+++ b/app_public/src/app/signin/signin.component.html
@@ -1,3 +1,33 @@
 
 <h1>This is the sign-in page!</h1>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    
+</head>
+<body>
+
+    <p>Nav test</p>
+
+<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+
+
+    <div class="container">
+        <a class="navbar-brand">Angular Router</a>
+        <ul class="nav navbar-nav" routerLinkActive="active">
+            <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="about">About</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="courses">Courses</a></li>
+        </ul>
+    </div>
+</nav>
+
+<router-outlet></router-outlet>
+
+</body>
+</html>
