--- a/app_public/src/app/app.component.html
+++ b/app_public/src/app/app.component.html
@@ -6,56 +6,35 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <style>
-li{
-  padding: 16px;
-}
 
 </style>
 
- <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+<div class="navColor" >
+ <nav class="navbar-expand-lg navbar navbar-dark bg-dark">
 
-  <a class="navbar-brand" href="#">LOGO</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+<ul class="nav navbar-nav">
+<li class="nav-item" routerlinkActive="active"><a routerLink="/" >Home</a></li>
+<li class="nav-item" routerlinkActive="active"><a routerLink="/about-us">About us</a></li>
+<li class="nav-item" routerlinkActive="active"><a routerLink="/contact-us">Contact us</a></li>
 
-        <a class="nav-link" routerlinkActive="active"><a routerLink="/" >Home</a>
-      </li>
+<li class="text-primary" class="nav-item" routerlinkActive="active"><a routerLink="/founded-item">Founded Item</a></li>
+<li class="nav-item" routerlinkActive="active"><a routerLink="/lost-item">Lost Item</a></li>
+<li class="nav-item" routerlinkActive="active"><a routerLink="/signin">Sign In</a></li>
+<li class="nav-item" routerlinkActive="active"><a routerLink="./registration">Registration</a></li>
 
- <li class="nav-item">
-   <a class="nav-link" routerlinkActive="active"><a routerLink="/contact-us">Contact us</a>
- </li>
-
- <li class="nav-item">
-    <class="nav-link" routerlinkActive="active"><a routerLink="/about-us">About us</a>
- </li>
-
- <li class="nav-item">
-   <class="nav-link" routerlinkActive="active"><a routerLink="/lost-item">Lost Item</a>
-      </li>
-
- <li class="nav-item">
-   <class="nav-link" routerlinkActive="active"><a routerLink="/founded-item">Founded Item</a>
- </li>
-
-
- <li class="nav-item">
-   <class="nav-link" routerlinkActive="active"><a routerLink="./registration">Registration</a>
- </li>
- <li class="nav-item">
-  <class="nav-link" routerlinkActive="active"><a routerLink="/signin">Sign In</a></li>
-
-    </ul>
-     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+ <div class="search1">
+<form class="form-inline">
+    <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-1 my-sm-0" type="submit">Search</button>
     </form>
-  </div>
+</div>
+
+</ul>
+
 </nav>
 
+
+</div>
 
 <router-outlet></router-outlet>
 
