--- a/app_public/src/app/home/home.component.html
+++ b/app_public/src/app/home/home.component.html
@@ -9,17 +9,21 @@
     body{
       background-image: url('../assets/images/dog-banner.webp');
       background-repeat: no-repeat;
-       background-size: 100%;
+       background-size: cover;
 
     }
     .tx{
       justify-content: center;
       font-family: 'Courier New', Courier, monospace;
       font-size: medium;
-      padding-left: 10px;
+      padding-left: 18px;
+
     }
     h1{
       text-align: center;
+    }
+    .left{
+      height: 950px;
     }
 
   </style>
@@ -38,6 +42,12 @@
       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
       sunt in culpa qui officia deserunt mollit anim id est laborum.
+     Lorem ipsum dolor sit amet, errem impedit philosophia ius ex, ea sea simul voluptua voluptatibus, alii dicit duo no. Ad vel animal delicata honestatis. An quo deserunt intellegam, has in quem aliquando tincidunt. Et suas molestie deserunt eos.
+
+Ut phaedrum scribentur eos, vitae expetendis vix at.
+Voluptaria sadipscing in eos.
+ Option voluptua assueverit his ad, sea habeo mucius an. Nec aeque virtute molestiae ne, facete noluisse menandri sea te, no saepe temporibus quo. Sea at delectus platonem, ut ludus vocibus blandit eum. Eam quis dolorem abhorreant id,
+vel percipit definitionem at.
 
 
     </P>
