corrected some errors and updated

--- a/app_public/src/app/signin/HH.html
+++ b/app_public/src/app/signin/HH.html
@@ -1,4 +1,4 @@
-<!-- ==================form goes here==================== -->
+<!-- ==================form goes here====================
  <hr>
 
 
@@ -34,4 +34,4 @@
 <button type="submit">Submit</button>
 
 
-</form>
+</form> -->
