updated contact file and petcustomers file and others as well

--- a/app_public/src/app/app.component.html
+++ b/app_public/src/app/app.component.html
@@ -20,7 +20,7 @@
 <li class="text-primary" class="nav-item" routerlinkActive="active"><a routerLink="/founded-item">Founded Item</a></li>
 <li class="nav-item" routerlinkActive="active"><a routerLink="/lost-item">Lost Item</a></li>
 <li class="nav-item" routerlinkActive="active"><a routerLink="/signin">Sign In</a></li>
-<li class="nav-item" routerlinkActive="active"><a routerLink="./registration">Registration</a></li>
+<li class="nav-item" routerlinkActive="active"><a routerLink="./petcustomers">Pet-customers</a></li>
 
  <div class="search1">
 <form class="form-inline">
