--- a/app_public/src/app/signin/signin.component.html
+++ b/app_public/src/app/signin/signin.component.html
@@ -1,15 +1,14 @@
 
-<h1>This is the sign-in page!</h1>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>signin</title>
 
 </head>
 <body>
+<h1>This is the sign-in page!</h1>
+
 
 
