I made some changes to the schema of the express code

--- a/routes/views/index.hbs
+++ b/routes/views/index.hbs
@@ -12,12 +12,11 @@
   color: white;
 }
 
-
 </style>
 </head>
 <body>
 
- <img src="../images/dog1.png" class="dog1"> 
+ <img src="../images/dog1.jpg" class="dog1"> 
 
 <div class="search">This a new central for the people
    who are concerned about their pets. This site will help you in finding. There be more information
@@ -54,7 +53,7 @@ sed do
 
   <div><label><span>Pet Name: </span><input placeholder="pet name, if any" class="input1" type="text" name="petName" tabindex="5"></label></div>
 
-  <div> <label><span>Breed: </span><input placeholder="its breed" class="input" type="text" name="bread" tabindex="6">
+  <div> <label><span>Bread: </span><input placeholder="its bread" class="input" type="text" name="bread" tabindex="6">
 </label>
   </div>
 
@@ -67,9 +66,6 @@ sed do
 <div><label><span>city:</span><input placeholder="City" class="input" type="text" name="city" tabindex="8"></label></div>
     
 <div><label><span>location:</span><input placeholder="location" class="input" type="text" name="location" tabindex="9"></label></div>
-<div><label><span>latitude:</span><input placeholder="latitude" class="input" type="text" name="lat" tabindex="10"></label></div>
-<div><label><span>longitude:</span><input placeholder="longitude" class="input" type="text" name="lng" tabindex="11"></label></div>
-
 
   <div><button name="submit" type="submit" class="contact-submit">submit</button></div>
 </form>
