changed text into a number

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -67,8 +67,8 @@ sed do
 <div><label><span>city:</span><input placeholder="City" class="input" type="text" name="city" tabindex="8"></label></div>
     
 <div><label><span>location:</span><input placeholder="location" class="input" type="text" name="location" tabindex="9"></label></div>
-<div><label><span>latitude:</span><input placeholder="latitude" class="input" type="text" name="lat" tabindex="10"></label></div>
-<div><label><span>longitude:</span><input placeholder="longitude" class="input" type="text" name="lng" tabindex="11"></label></div>
+<div><label><span>latitude:</span><input placeholder="latitude" class="input" type="number" name="lat" tabindex="10"></label></div>
+<div><label><span>longitude:</span><input placeholder="longitude" class="input" type="number" name="lng" tabindex="11"></label></div>
 
 
   <div><button name="submit" type="submit" class="contact-submit">submit</button></div>
