changed the form on express with a new on
I also, added unupload file for new ficture

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -183,8 +183,11 @@ li a:hover {
 #contact-form input[type="description"],
 #contact-form input[type="city"],
 #contact-form input[type="location"],
-#contact-form input[type="more info"],
-#contact-form input[type="text"],
+#contact-form input[type="more info"], 
+#contact-form input[type="number"],
+#contact-form input[type="number"],
+#contact-form input[type="file"],
+
 
 #contact-form textarea {
     width: 100%;
