--- a/views/tijaabo.html
+++ b/views/tijaabo.html
@@ -1,51 +1,3 @@
-
-{{>nav }}
-
-<h1>{{title}}</h1>
-{{!-- <p>Welcome, {{title}}</p> --}}
-<hr>
-<style>
-.contact-submit{
-  width: 260px;
-  color:rgb(12, 17, 6);
-  background-color: rgb(133, 125, 93);
-  color: white;
- 
-}
-#desc{
-  height: 16px;
-  width: 345px;
-  background-color: rgb(25, 43, 235);
-}
-.dd1{
-  background-color: rgb(14, 131, 119);
-  width:50%;
-
-}
-.gmap{
-  background-color: rgb(218, 219, 171);
-  width:60%;
-  height: 960px;
-  float: right;
-  padding: 35px;
-}
-.newf{
-    background-color: darkblue;
-    float: left;
-    width: 40%;
-    
-    background-color:rgb(14, 10, 78);
-    padding: 44px;
-}
-</style>
-
-
-</head>
-<body>
-<div class="dd1>
- <img src="../images/dog1.png" class="dog1">  
-
-</div>
 <!-- Special version of Bootstrap that only affects content wrapped in .bootstrap-iso -->
 <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
 
@@ -56,7 +8,14 @@
 <style>
 
 
-
+.newf{
+    background-color: darkblue;
+    float: right;
+    width: 650px;
+    margin-right: 286px;
+    background-color: darkcyan;
+    padding: 34px;
+}
 </style>
 <div class="newf">
 <div class="bootstrap-iso">
@@ -64,7 +23,7 @@
   <div class="row">
    <div class="col-md-4 col-sm-4 col-xs-8">
     <form id="contact-form" action ="/add" method="post">
-<div class="form-group ">
+     <div class="form-group ">
          <br>
       <label class="control-label requiredField" for="name">
        First Name
@@ -73,8 +32,8 @@
        </span>
       </label>
       <input class="form-control" id="name" name="firstName" type="text"/>
-     {{!-- </div> --}}
-     {{!-- <div class="form-group "> --}}
+     </div>
+     <div class="form-group ">
       <label class="control-label requiredField" for="name4">
        Last Name
        <span class="asteriskField">
@@ -84,7 +43,6 @@
       <input class="form-control" id="name4" name="lastName" type="text"/>
      </div>
 
-
      <div class="form-group ">
       <label class="control-label requiredField" for="number">
        Phone
@@ -92,7 +50,7 @@
         *
        </span>
       </label>
-      <input class="form-control" id="number" name="tel" type="tel"/>
+      <input class="form-control" id="number" name="tel" type="text"/>
      </div>
      <div class="form-group ">
       <label class="control-label requiredField" for="email">
@@ -115,59 +73,47 @@
       </label>
       <input class="form-control" id="name2" name="breed" type="text"/>
      </div>
-
-     <div class="form-group " >
+     <div class="form-group ">
       <label class="control-label " for="message">
        Description details
       </label>
-      <textarea class="form-control" cols="60" id="message" name="description" rows="3" ></textarea>
+      <textarea class="form-control" cols="30" id="message" name="description" rows="10"></textarea>
      </div>
-     {{!-- <div class="form-group ">
+     <div class="form-group ">
       <label class="control-label " for="name3">
        City
       </label>
       <input class="form-control" id="name3" name="city" type="text"/>
-     </div> --}}
+     </div>
      <div class="form-group ">
       <label class="control-label " for="name5">
        Location
       </label>
       <input class="form-control" id="name5" name="Location" type="text"/>
      </div>
-    
      <div class="form-group ">
       <label class="control-label " for="name6">
        Latitude
       </label>
       <input class="form-control" id="name6" name="lat" type="text"/>
      </div>
-
      <div class="form-group ">
       <label class="control-label " for="name7">
        Longitude
       </label>
       <input class="form-control" id="name7" name="lng" type="text"/>
      </div>
-     {{!-- ===
-      --}}
-
-<div class="form-group ">
-    <label class="control-label " for="name8">
-        upload picture.
-    </label>
-    <input class="form-control" id="name8" name="upload" type="file"/>
-</div>
-<br>
-<br>
-
-      {{!-- ===== --}}
+     <div class="form-group ">
+      <label class="control-label " for="name8">
+       Submit
+      </label>
+      <input class="form-control" id="name8" name="name8" type="text"/>
+     </div>
      <div class="form-group">
       <div>
-        <br>
        <button class="btn btn-primary btn-lg" name="submit" type="submit">
         Submit
        </button>
-
       </div>
      </div>
     </form>
@@ -176,10 +122,3 @@
  </div>
 </div>
 </div>
-<div class="gmap">
-    <h3>Welcome to Pet -Central</h3>To send a complete information about where you lost or found the pet, 
-    you can select the position at the map, and fill the form.</p></div>
-
-
-<br>
-{{> footer}}
