added file upload to the Angular section of the project

--- a/app_public/src/app/petcustomers/petcustomers.component.html
+++ b/app_public/src/app/petcustomers/petcustomers.component.html
@@ -40,7 +40,21 @@
 <div class="form-group">
 
      <label>Please enter the Location:</label>
-     <input type="text" class="form-control" formControlName="description"></div>
+     <input type="text" class="form-control" formControlName="description">
+    </div>
+
+<div class="form-group">
+<label>Please enter the Latitude:</label>
+<input type="number" class="form-control" formControlName="Lat"></div>
+
+<div class="form-group">
+<label>Please enter the Longitude:</label>
+<input type="number" class="form-control" formControlName="Lng"></div>
+
+<div class="form-group">
+<label>Please upload image:</label>
+<input type="file" class="form-control" formControlName="upload"></div>
+
 <button class="btn btn-primary">Submit</button>
 
 </form>
