--- a/app_public/src/app/petcustomers/petcustomers.component.html
+++ b/app_public/src/app/petcustomers/petcustomers.component.html
@@ -53,7 +53,7 @@
 
 <div class="form-group">
 <label>Please upload image:</label>
-<input type="file" class="form-control" formControlName="upload"></div>
+<input type="file" (change)="onFileChanged($event)" class="form-control" formControlName="upload"></div>
 
 <button class="btn btn-primary">Submit</button>
 
