--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,15 +16,15 @@
 .gmap{
   background-color: rgb(224, 183, 129);
   width:50%;
-  height: 960px;
+  height: 950px%;
   float: right;
   padding: 35px;
-  margin-right: 35px;
+  margin-right: 30px;
 }
 .newf{
     background-color: rgb(170, 221, 197);
     float: left;
-    width: 48%;
+    width: 45%;
     padding: 10px;
     padding-left: 70px;
 }
