--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,14 +3,16 @@
 
 <h1>{{title}}</h1>
 {{!-- <p>Welcome, {{title}}</p> --}}
+
+
 <hr>
 <style>
 
 
 #desc{
-  height: 316px;
+  height: 312px;
   width: 345px;
-  background-color: rgb(200, 207, 223);
+
 }
 
 .gmap{
@@ -22,12 +24,15 @@
   margin-right: 30px;
 }
 .newf{
-    background-color: rgb(170, 221, 197);
+    background-color: rgb(128, 224, 236);
     float: left;
     width: 45%;
     padding: 10px;
     padding-left: 70px;
+    margin-left: 15px;
 }
+
+
 </style>
 
 
