--- a/app_public/src/app/petcustomers/petcustomers.component.html
+++ b/app_public/src/app/petcustomers/petcustomers.component.html
@@ -1,4 +1,7 @@
+<div class="rtside">
+<h3>Select the location on the map</h3>
 
+  </div>
 
 <div class=form1>
 <div class="container-fluid">
@@ -7,14 +10,14 @@
 
   <div class="form-group">
     <label>Please enter your Name:</label>
-<input type="text" class="form-control" name=" firstName">
+<input type="text" class="form-control" formControlName=" firstName">
 
   </div>
 
 
  <div class="form-group">
     <label>Please enter your Name:</label>
-    <input type="text" class="form-control" name="lastName"></div>
+    <input type="text" class="form-control" formControlName="lastName"></div>
 
  <div class="form-group">
     <label>Please enter your E-mail:</label>
@@ -40,21 +43,29 @@
 <div class="form-group">
 
      <label>Please enter the Location:</label>
-     <input type="text" class="form-control" formControlName="description">
+     <input type="text" class="form-control" formControlName="location">
     </div>
 
 <div class="form-group">
 <label>Please enter the Latitude:</label>
-<input type="number" class="form-control" formControlName="Lat"></div>
+<input type="text" class="form-control" formControlName="lat"></div>
 
 <div class="form-group">
 <label>Please enter the Longitude:</label>
-<input type="number" class="form-control" formControlName="Lng"></div>
+<input type="text" class="form-control" formControlName="lng"></div>
 
 <div class="form-group">
 <label>Please upload image:</label>
 <input type="file" (change)="onFileChanged($event)" class="form-control" formControlName="upload"></div>
 
+<div class="form-group">
+<label>Please select lost or found</label>
+
+<select (change)="selectChangeHandeler($event)">
+<option value="lost">Lost</option>
+<option value="Found">Found</option>
+</select>
+</div>
 <button class="btn btn-primary">Submit</button>
 
 </form>
