--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,7 +119,7 @@ ul {
     overflow: hidden;
     background-color: white;
 
-    font-size: 15px;
+    font-size: 20px;
 
 
 }
@@ -148,13 +148,13 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: rgb(218, 138, 47);
+    background-color: rgb(31, 223, 111);
 }
 
 .search{
   float: right;
   width: 400px;
-  background-color: white;
+  background-color: rgb(195, 219, 183);
   padding-left: 40px;
   padding-right: 85px;
   padding-top: 2px;
@@ -212,12 +212,7 @@ li a:hover {
 }
 
 
-.dog1 {
-    width : 300px;
-    height : 300px;
-    float : left;
-    padding-left: 80px;
-  
-    background-color : white;
+
+.list{
+    background-color: yellowgreen;
 }
- 
