--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,11 +1,10 @@
 
 
-
-    
+    <li><a href="/get-data">LoadData</a></li>
     <li><a href="/contact">Contact us</a></li>
     <li><a href="/lost">Lost item</a> </li>
     <li><a href="/found">Founded item</a><li>
     <li><a href="/about">About us</a></li>
     <li><a href="/signup-form">Sign up</a></li>
     <li><a href="/">Home</a></li>
-    
+
